--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TillHandraiseWeb</title>
+    <title>Till</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +10,8 @@
   </head>
 
   <body>
+    <%= render partial: 'shared/header' %>
     <%= yield %>
+    <%= render partial: 'shared/footer' %>
   </body>
 </html>
