Header and Tagline

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,12 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet">
   </head>
 
   <body>
-    <%= render partial: 'shared/header' %>
+    <%= render partial: 'header/index' %>
     <%= yield %>
     <%= render partial: 'shared/footer' %>
   </body>
