--- a/app/views/home/_hero.html.erb
+++ b/app/views/home/_hero.html.erb
@@ -1,3 +1,11 @@
 <section class="HomeSection">
-  <%= render partial: 'shared/tagline', locals: { body: 'This is a tag line that goes here' } %>
+  <%=
+    render(
+      partial: 'home/tagline_container'
+    )
+  %>
+  <div
+    style="height: 210px; width: 100%; background-color: grey; box-shadow: 0px 13px 14px 0 rgba(0, 0, 0, 0.13);"
+    alt="Placeholder until I have the image"
+  />
 </section>
