--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <%= render partial: 'hero' %>
-<section></section>
+<%= render partial: 'lead_value_prop' %>
 <section></section>
 <section></section>
 <section></section>
