--- a/app/assets/stylesheets/header/drawer_toggle.scss
+++ b/app/assets/stylesheets/header/drawer_toggle.scss
@@ -1,6 +1,8 @@
 @import './mixins/breakpoints';
 
 .DrawerToggle {
+  width: 20px;
+
   @media (min-width: $desktop-width) {
     display: none;
   }
