--- a/app/views/home/_hero.html.erb
+++ b/app/views/home/_hero.html.erb
@@ -5,7 +5,7 @@
     )
   %>
   <div
-    style="height: 210px; width: 100%; background-color: grey; box-shadow: 0px 13px 14px 0 rgba(0, 0, 0, 0.13);"
+    style="height: 210.1px; box-shadow: 10px 13px 14px 0 rgba(0, 0, 0, 0.13); background-color: grey;"
     alt="Placeholder until I have the image"
   />
 </section>
