Newsletter, Button, and TextInput

--- a/app/assets/stylesheets/mixins/colors.scss
+++ b/app/assets/stylesheets/mixins/colors.scss
@@ -3,7 +3,7 @@ $tl-navy: #126786;
 $tl-baby-blue: rgba(166, 219, 226, 0.15);
 $tl-pink: #f7f2ef;
 $tl-orange: #ee8748;
-$tl-orange-hov: #ee8748;
+$tl-orange-hov: #CF7A4B;
 
 $tl-dark-grey: #2a2d33;
 $tl-light-grey: #e2e2e2;
