--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,4 +2,4 @@
 <%= render partial: 'lead_value_prop' %>
 <%= render partial: 'goals' %>
 <%= render partial: 'features' %>
-<section></section>
+<%= render partial: 'newsletter' %>
