Footer (first pass)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,6 @@
   <body>
     <%= render partial: 'header/index' %>
     <%= yield %>
-    <%= render partial: 'shared/footer' %>
+    <%= render partial: 'footer/footer' %>
   </body>
 </html>
