--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -17,3 +17,10 @@ h1, h2, h3, h4, p, a, li {
 h3 { font-size: 25px; }
 h4 { font-size: 20px; }
 p  { font-size: 16px; }
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
