--- a/app/assets/stylesheets/home/newsletter.scss
+++ b/app/assets/stylesheets/home/newsletter.scss
@@ -9,12 +9,14 @@
   }
 
   &__form-control {
-    display: flex;
-    flex-direction: column;
+    form {
+      display: flex;
+      flex-direction: column;
 
-    .TlButton {
-      margin-top: 24px;
-      width: 112px;
+      .TlButton {
+        margin-top: 24px;
+        width: 112px;
+      }
     }
   }
 }
