--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,13 @@
   </head>
 
   <body>
+    <% if flash[:notice].present? || flash[:alert].present? %>
+      <%= render partial: 'shared/flash_banner' %>
+    <% end %>
     <%= render partial: 'header/index' %>
+
     <%= yield %>
+
     <%= render partial: 'footer/footer' %>
   </body>
 </html>
