Desktop styling for Features and Newsletter (first pass)

--- a/app/assets/stylesheets/form/text_input.scss
+++ b/app/assets/stylesheets/form/text_input.scss
@@ -1,8 +1,11 @@
+@import './mixins/colors';
+
 .TlTextInput {
   border-radius: 10px;
   padding: 19px 30px;
   font-size: 16px;
   font-family: 'Raleway', sans-serif;
+  color: $tl-dark-grey;
 
   outline: 0;
   margin: 0;
