--- a/app/views/home/_newsletter.html.erb
+++ b/app/views/home/_newsletter.html.erb
@@ -1,9 +1,11 @@
 <section class="Newsletter">
-  <h2>Sign up for our newsletter</h2>
-  <p>
-    Stay tuned on our progress and get proven tips
-    and tricks for how to teach your kids about money
-  </p>
+  <div class="Newsletter__copy">
+    <h2>Sign up for our newsletter</h2>
+    <p>
+      Stay tuned on our progress and get proven tips
+      and tricks for how to teach your kids about money
+    </p>
+  </div>
   <div class="Newsletter__form-control">
     <%= form_tag leads_path do %>
       <%= 
