--- a/app/assets/stylesheets/home/newsletter.scss
+++ b/app/assets/stylesheets/home/newsletter.scss
@@ -1,4 +1,5 @@
 @import "./mixins/colors";
+@import "./mixins/breakpoints";
 
 .Newsletter {
   padding: 40px 30px;
@@ -16,6 +17,33 @@
       .TlButton {
         margin-top: 24px;
         width: 112px;
+      }
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    display: flex;
+
+    h2 { font-size: 30px; }
+    p  { font-size: 18px; }
+
+    &__copy {
+      max-width: 500px;
+    }
+  
+    &__form-control {
+      display: flex;
+      align-items: center;
+      flex-grow: 1;
+      padding-left: 40px;
+
+      form {
+        flex-direction: row;
+
+        .TlButton {
+          margin-top: 0;
+          margin-left: 20px;
+        }
       }
     }
   }
