More desktop styles

--- a/app/views/home/_lead_value_prop.html.erb
+++ b/app/views/home/_lead_value_prop.html.erb
@@ -1,4 +1,4 @@
-<section class="LeadValueProp" style="padding: 40px 30px; text-align: center;">
+<section class="LeadValueProp">
   <h3>
     It's never too early to talk to your kids about money
   </h3>
