--- a/app/assets/stylesheets/form/text_input.scss
+++ b/app/assets/stylesheets/form/text_input.scss
@@ -1,19 +1,30 @@
 @import './mixins/colors';
 
 .TlTextInput {
-  border-radius: 10px;
-  padding: 19px 30px;
-  font-size: 16px;
-  font-family: 'Raleway', sans-serif;
-  color: $tl-dark-grey;
+  display: flex;
+  align-items: center;
 
-  outline: 0;
-  margin: 0;
-  border: 0;
-  vertical-align: middle;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  -ms-appearance: none;
-  -o-appearance: none;
-  appearance: none;
+  background-color: white;
+  border-radius: 12px;
+  width: 100%;
+  height: 60px;
+
+  &__input {
+    font-size: 16px;
+    font-family: 'Raleway', sans-serif;
+    color: $tl-dark-grey;
+  
+    width: 100%;
+    margin: 0 31px;
+    padding: 0;
+    outline: 0;
+    border: 0;
+
+    vertical-align: middle;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+    -o-appearance: none;
+    appearance: none;
+  }
 }
