--- a/app/assets/stylesheets/home/newsletter.scss
+++ b/app/assets/stylesheets/home/newsletter.scss
@@ -9,6 +9,11 @@
     color: white;
   }
 
+  &__text-input-container {
+    display: flex;
+    width: 100%;
+  }
+
   &__form-control {
     form {
       display: flex;
@@ -23,12 +28,17 @@
 
   @media (min-width: $desktop-width) {
     display: flex;
+    padding: 54.2px 108.9px;
 
     h2 { font-size: 30px; }
     p  { font-size: 18px; }
 
     &__copy {
       max-width: 500px;
+    }
+
+    &__text-input-container {
+      width: 296px;
     }
   
     &__form-control {
