--- a/app/views/home/_hero.html.erb
+++ b/app/views/home/_hero.html.erb
@@ -1,11 +1,11 @@
-<section class="HomeSection">
+<section class="Hero">
   <%=
     render(
       partial: 'home/tagline_container'
     )
   %>
   <div
-    style="height: 210.1px; box-shadow: 10px 13px 14px 0 rgba(0, 0, 0, 0.13); background-color: grey;"
+    class="Hero__placeholder"
     alt="Placeholder until I have the image"
   />
 </section>
