--- a/app/assets/stylesheets/header/header_nav.scss
+++ b/app/assets/stylesheets/header/header_nav.scss
@@ -15,6 +15,8 @@
         a {
           color: $tl-navy;
           text-decoration: none;
+          font-weight: 600;
+          font-size: 18px;
         }
       }
     }
