--- a/app/assets/stylesheets/tagline/tagline.scss
+++ b/app/assets/stylesheets/tagline/tagline.scss
@@ -1,4 +1,5 @@
 @import "./mixins/colors";
+@import "./mixins/breakpoints";
 
 .Tagline {
   display: flex;
@@ -16,5 +17,9 @@
     font-weight: 800;
     color: white;
     text-align: center;
+
+    @media (min-width: $desktop-width) {
+      font-size: 45px;
+    }
   }
 }
