--- a/app/views/home/_goals.html.erb
+++ b/app/views/home/_goals.html.erb
@@ -1,21 +1,23 @@
 <section class="Goals">
   <div
-    style="width: 300px; height: 341px; margin: auto; border-radius: 20px;box-shadow: 10px 13px 14px 0 rgba(0, 0, 0, 0.13); background-color: grey;"
+    class="Goals__placeholder"
     alt="Placeholder"
   ></div>
-  <h3>Let's make sure every child is financially savvy when they enter adulthood.</h3>
-  <ul>
-    <li>
-      Understands the burden of college loan payments
-      and the value of compounding interests.
-    </li>
-    <li>
-      Values money, doesn't overspend and saves whenever
-      possible
-    </li>
-    <li>
-      Is building up good credit scores and knows the
-      dangers of credit card fees and debt traps
-    </li>
-  <ul>
+  <div class="Goals__copy">
+    <h3>Let's make sure every child is financially savvy when they enter adulthood.</h3>
+    <ul>
+      <li>
+        Understands the burden of college loan payments
+        and the value of compounding interests.
+      </li>
+      <li>
+        Values money, doesn't overspend and saves whenever
+        possible
+      </li>
+      <li>
+        Is building up good credit scores and knows the
+        dangers of credit card fees and debt traps
+      </li>
+    <ul>
+  </div>
 </section>
