--- a/app/views/home/_goals.html.erb
+++ b/app/views/home/_goals.html.erb
@@ -1,23 +1,34 @@
-<section class="Goals">
-  <div
-    class="Goals__placeholder"
-    alt="Placeholder"
-  ></div>
-  <div class="Goals__copy">
-    <h3>Let's make sure every child is financially savvy when they enter adulthood.</h3>
-    <ul>
-      <li>
-        Understands the burden of college loan payments
-        and the value of compounding interests.
-      </li>
-      <li>
-        Values money, doesn't overspend and saves whenever
-        possible
-      </li>
-      <li>
-        Is building up good credit scores and knows the
-        dangers of credit card fees and debt traps
-      </li>
-    <ul>
+<section class="Goals parent">
+  <div class="Content">
+    <div
+      class="Goals__placeholder"
+      alt="Placeholder"
+    ></div>
+    <div class="Goals__copy">
+      <h3>Let's make sure every child is financially savvy when they enter adulthood.</h3>
+      <ul>
+        <li class="Goals__list-item">
+          <div class="Goals__list-dot"></div>
+          <div>
+            Understands the burden of college loan payments
+            and the value of compounding interests.
+          </div>
+        </li>
+        <li class="Goals__list-item">
+          <div class="Goals__list-dot"></div>
+          <div>
+            Values money, doesn't overspend and saves whenever
+            possible
+          </div>
+        </li>
+        <li class="Goals__list-item">
+          <div class="Goals__list-dot"></div>
+          <div>
+            Is building up good credit scores and knows the
+            dangers of credit card fees and debt traps
+          </div>
+        </li>
+      <ul>
+    </div>
   </div>
 </section>
