--- a/app/views/home/_hero.html.erb
+++ b/app/views/home/_hero.html.erb
@@ -1,11 +1,13 @@
-<section class="Hero">
-  <%=
-    render(
-      partial: 'home/tagline_container'
-    )
-  %>
-  <div
-    class="Hero__placeholder"
-    alt="Placeholder until I have the image"
-  />
+<section class="Hero parent">
+  <div class="Content">
+    <%=
+      render(
+        partial: 'home/tagline_container'
+      )
+    %>
+    <div
+      class="Hero__placeholder"
+      alt="Placeholder until I have the image"
+    />
+  </div>
 </section>
