--- a/app/views/home/_lead_value_prop.html.erb
+++ b/app/views/home/_lead_value_prop.html.erb
@@ -1,9 +1,11 @@
-<section class="LeadValueProp">
-  <h3>
-    It's never too early to talk to your kids about money
-  </h3>
-  <p>
-    Till is creating the toolkit and the roadmap to ensure you
-    successfully teach your kids to be financially responsible.
-  </p>
+<section class="LeadValueProp parent">
+  <div class="Content">
+    <h3>
+      It's never too early to talk to your kids about money
+    </h3>
+    <p>
+      Till is creating the toolkit and the roadmap to ensure you
+      successfully teach your kids to be financially responsible.
+    </p>
+  </div>
 </section>
