--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -24,3 +24,14 @@ ul {
   padding: 0;
   overflow: hidden;
 }
+
+.parent {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+
+.Content {
+  max-width: 1280px;
+  width: 100%;
+}
