--- a/app/views/home/_features.html.erb
+++ b/app/views/home/_features.html.erb
@@ -1,43 +1,49 @@
-<section class="Features">
-  <h3>
-    Till is building a kickass suite of parental
-    money management and teaching tools
-  </h3>
-  <div class="Features__item">
-    <h4>A stress free financial management wizard</h4>
-    <p>
-      You'll be able to easily automate allowance, chores,
-      savings matching, and loan repayments in such a way
-      that your kids don't argue with you and they implicitly
-      learn the right financial instincts and values.
-    </p>
-  </div>
-  <div class="Features__item">
-    <h4>Involve your whole community</h4>
-    <p>
-      With our gift and sponsorship tools, friends and family
-      will be able to contribute to reading challenges, college
-      savings, that special thing your kids are saving for and
-      more - all while you retain control to ensure it’s according
-      to your parenting philosophy.
-    </p>
-  </div>
-  <div class="Features__item">
-    <h4>A roadmap for all of childhood</h4>
-    <p>
-      We'll share with you our research, tips and tricks from
-      other parents, and guide you every step of the way so
-      you can rest assured you've taught your kids everything
-      they need to know.
-    </p>
-  </div>
-  <div class="Features__item">
-    <h4>Teach with real money</h4>
-    <p>
-      We believe in learning by doing. All of our debit cards,
-      savings accounts, checking accounts and 529 accounts are
-      completely secure, backed by real banks and 100% FDIC
-      insured.
-    </p>
+<section class="Features parent">
+  <div class="Content">
+    <div class="Features__heading">
+      <h3>
+        Till is building a kickass suite of parental
+        money management and teaching tools
+      </h3>
+    </div>
+    <div class="Features__items">
+      <div class="Features__item">
+        <h4>A stress free financial management wizard</h4>
+        <p>
+          You'll be able to easily automate allowance, chores,
+          savings matching, and loan repayments in such a way
+          that your kids don't argue with you and they implicitly
+          learn the right financial instincts and values.
+        </p>
+      </div>
+      <div class="Features__item">
+        <h4>Involve your whole community</h4>
+        <p>
+          With our gift and sponsorship tools, friends and family
+          will be able to contribute to reading challenges, college
+          savings, that special thing your kids are saving for and
+          more - all while you retain control to ensure it’s according
+          to your parenting philosophy.
+        </p>
+      </div>
+      <div class="Features__item">
+        <h4>A roadmap for all of childhood</h4>
+        <p>
+          We'll share with you our research, tips and tricks from
+          other parents, and guide you every step of the way so
+          you can rest assured you've taught your kids everything
+          they need to know.
+        </p>
+      </div>
+      <div class="Features__item">
+        <h4>Teach with real money</h4>
+        <p>
+          We believe in learning by doing. All of our debit cards,
+          savings accounts, checking accounts and 529 accounts are
+          completely secure, backed by real banks and 100% FDIC
+          insured.
+        </p>
+      </div>
+    </div>
   </div>
 </section>
