--- a/app/views/shared/form/_text_input.html.erb
+++ b/app/views/shared/form/_text_input.html.erb
@@ -1,5 +1,6 @@
 <div class="TlTextInput">
   <input
+    id="<%= local_assigns[:input_id] %>"
     class="TlTextInput__input <%= local_assigns[:input_classes]&.joins(' ') %>"
     name="<%= local_assigns[:name] %>"
     type="<%= local_assigns[:type] || 'text' %>"
