accessibility for form input

--- a/app/assets/stylesheets/form/button.scss
+++ b/app/assets/stylesheets/form/button.scss
@@ -19,6 +19,10 @@
   -o-appearance: none;
   appearance: none;
 
+  &:focus {
+    background-color: $tl-orange-hov;
+  }
+
   @media (hover: hover) {
     &:hover {
       cursor: pointer;
