--- a/app/views/home/_newsletter.html.erb
+++ b/app/views/home/_newsletter.html.erb
@@ -26,7 +26,7 @@
           locals: {
             value: 'Submit',
             type: 'submit',
-            name: "submit"
+            name: "btnSubmit"
           }
         )
       %>
