--- a/app/assets/stylesheets/home/goals.scss
+++ b/app/assets/stylesheets/home/goals.scss
@@ -24,6 +24,10 @@
 
   &__copy {
     max-width: 700px;
+
+    @media (min-width: $desktop-width) {
+      padding-right: 45px;
+    }
   }
 
   &__list-item {
