add extensions to images

--- a/app/views/footer/_social.html.erb
+++ b/app/views/footer/_social.html.erb
@@ -2,17 +2,17 @@
   <ul>
     <li>
       <a href="">
-        <img src="<%= image_path('social/facebook') %>" alt="Facebook" />
+        <img src="<%= image_path('social/facebook.svg') %>" alt="Facebook" />
       </a>
     </li>
     <li>
       <a href="">
-        <img src="<%= image_path('social/twitter') %>" alt="Twitter" />
+        <img src="<%= image_path('social/twitter.svg') %>" alt="Twitter" />
       </a>
     </li>
     <li>
       <a href="">
-        <img src="<%= image_path('social/instagram') %>" alt="Instagram" />
+        <img src="<%= image_path('social/instagram.svg') %>" alt="Instagram" />
       </a>
     </li>
   </ul>
