--- a/app/views/home/_features.html.erb
+++ b/app/views/home/_features.html.erb
@@ -8,7 +8,7 @@
     </div>
     <div class="Features__items">
       <div class="Features__item">
-        <img style="width: 128px;" src="<%= image_path('home/goals/wizard') %>" />
+        <img style="width: 128px;" src="<%= image_path('home/goals/wizard.svg') %>" />
         <div class="Features__item-copy">
           <h4>A stress free financial management wizard</h4>
           <p>
@@ -20,7 +20,7 @@
         </div>
       </div>
       <div class="Features__item">
-        <img style="width: 128px;" src="<%= image_path('home/goals/community') %>" />
+        <img style="width: 128px;" src="<%= image_path('home/goals/community.svg') %>" />
         <div class="Features__item-copy">
           <h4>Involve your whole community</h4>
           <p>
@@ -33,7 +33,7 @@
         </div>
       </div>
       <div class="Features__item">
-        <img style="width: 128px;" src="<%= image_path('home/goals/roadmap') %>" />
+        <img style="width: 128px;" src="<%= image_path('home/goals/roadmap.svg') %>" />
         <div class="Features__item-copy">
           <h4>A roadmap for all of childhood</h4>
           <p>
@@ -45,7 +45,7 @@
         </div>
       </div>
       <div class="Features__item">
-        <img style="width: 128px;" src="<%= image_path('home/goals/money') %>" />
+        <img style="width: 128px;" src="<%= image_path('home/goals/money.svg') %>" />
         <div class="Features__item-copy">
           <h4>Teach with real money</h4>
           <p>
