--- a/app/views/home/_newsletter.html.erb
+++ b/app/views/home/_newsletter.html.erb
@@ -1,4 +1,4 @@
-<section class="Newsletter">
+<section id="newsletter" class="Newsletter">
   <div class="Newsletter__copy">
     <h2>Sign up for our newsletter</h2>
     <p>
