--- a/app/assets/stylesheets/form/text_input.scss
+++ b/app/assets/stylesheets/form/text_input.scss
@@ -8,7 +8,6 @@
   border-radius: 12px;
   width: 100%;
   height: 60px;
-  border: 2px solid white;
 
   &__input {
     font-size: 16px;
@@ -30,7 +29,7 @@
   }
 
   &__error {
-    border: 2px solid $tl-error;
+    box-shadow: 0 0 1pt 2pt $tl-error;
 
     .TlTextInput__input {
       color: $tl-error;
