--- a/app/assets/stylesheets/footer/footer_nav.scss
+++ b/app/assets/stylesheets/footer/footer_nav.scss
@@ -1,16 +1,27 @@
+@import "./mixins/breakpoints";
+
 .FooterNav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   ul {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
 
    li {
-     width: 50%;
      text-align: center;
      padding: 20px 0;
+     width: 50%;
 
      font-size: 22px;
      font-weight: 600;
+
+     @media (min-width: $desktop-width) {
+       width: inherit;
+       margin: 0 50px;
+     }
    }
   }
 }
