--- a/app/views/footer/_footer.html.erb
+++ b/app/views/footer/_footer.html.erb
@@ -1,4 +1,5 @@
 <footer class="Footer">
   <%= render partial: 'footer/footer_nav' %>
   <%= render partial: 'footer/social' %>
+  <%= render partial: 'footer/terms' %>
 </footer>
