--- a/app/views/home/_goals.html.erb
+++ b/app/views/home/_goals.html.erb
@@ -8,21 +8,21 @@
       <h3>Let's make sure every child is financially savvy when they enter adulthood.</h3>
       <ul>
         <li class="Goals__list-item">
-          <div class="Goals__list-dot"></div>
+          <div class="Goals__list-dot Dot"></div>
           <div>
             Understands the burden of college loan payments
             and the value of compounding interests.
           </div>
         </li>
         <li class="Goals__list-item">
-          <div class="Goals__list-dot"></div>
+          <div class="Goals__list-dot Dot"></div>
           <div>
             Values money, doesn't overspend and saves whenever
             possible
           </div>
         </li>
         <li class="Goals__list-item">
-          <div class="Goals__list-dot"></div>
+          <div class="Goals__list-dot Dot"></div>
           <div>
             Is building up good credit scores and knows the
             dangers of credit card fees and debt traps
