--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -35,3 +35,12 @@ ul {
   max-width: 1280px;
   width: 100%;
 }
+
+.Dot {
+  height: 15px;
+  min-width: 15px;
+  max-width: 15px;
+  background-color: white;
+  border-radius: 50%;
+  display: inline-block;
+}
