--- a/app/assets/stylesheets/footer/social.scss
+++ b/app/assets/stylesheets/footer/social.scss
@@ -1,8 +1,15 @@
+@import "./mixins/breakpoints";
+
 .Social {
   margin-top: 50px;
 
   ul {
     display: flex;
     justify-content: space-between;
+
+    @media (min-width: $desktop-width) {
+      width: 318px;
+      margin: auto;
+    }
   }
 }
