--- a/app/views/header/_drawer_toggle.html.erb
+++ b/app/views/header/_drawer_toggle.html.erb
@@ -1,3 +1,3 @@
-<div class="DrawerToggle">
+<div id="drawer-toggle" class="DrawerToggle">
   <img src="<%= image_path('header/drawer.svg') %>" />
 </div>
