--- a/app/views/header/_header_nav.html.erb
+++ b/app/views/header/_header_nav.html.erb
@@ -1,4 +1,4 @@
-<nav class="HeaderNav">
+<nav class="HeaderNav mobileHide">
   <ul>
     <li><a href="#welcome">About Us</a></li>
     <li><a href="#menu">Newsletters</a></li>
