--- a/app/assets/stylesheets/header/header.scss
+++ b/app/assets/stylesheets/header/header.scss
@@ -4,11 +4,25 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
+  overflow: hidden;
+
+  position: relative;
 
   height: 100px;
   padding: 0 27px;
+  transition: .2s;
 
   @media (min-width: $desktop-width) {
     padding: 0 43px;
+  }
+
+  &-mobile {
+    margin-bottom: 200px;
+    overflow: visible;
+
+    @media (min-width: $desktop-width) {
+      margin-bottom: 0;
+    }
   }
 }
