--- a/app/assets/stylesheets/header/header_nav.scss
+++ b/app/assets/stylesheets/header/header_nav.scss
@@ -2,28 +2,45 @@
 @import './mixins/colors';
 
 .HeaderNav {
-  display: none;
+  position: absolute;
+  left: 0;
+  top: 100%;
+  width: 100%;
 
   @media (min-width: $desktop-width) {
-    display: flex;
+    position: relative;
+    top: 0;
+    width: inherit;
+  }
 
-    ul {
-      display: flex;
+  ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 170px;
+
+    @media (min-width: $desktop-width) {
+      flex-direction: row;
       align-items: center;
       justify-content: space-between;
 
       min-width: 450px;
+      height: inherit;
+    }
 
-      li {
+    li {
+
+      @media (min-width: $desktop-width) {
         float: left;
         padding-left: 30px;
+      }
 
-        a {
-          color: $tl-navy;
-          text-decoration: none;
-          font-weight: 600;
-          font-size: 18px;
-        }
+      a {
+        color: $tl-navy;
+        text-decoration: none;
+        font-weight: 600;
+        font-size: 18px;
       }
     }
   }
