--- a/app/assets/javascripts/home.js.erb
+++ b/app/assets/javascripts/home.js.erb
@@ -5,7 +5,8 @@ var cache = {
   formInput: null,
   header: null,
   drawerToggle: null,
-  headerIsOpen: false
+  headerIsOpen: false,
+  csrfToken: null,
 };
 
 function initCache() {
@@ -14,6 +15,10 @@ function initCache() {
   cache.formInput = document.getElementById('newsletter-form');
   cache.header = document.getElementsByClassName('Header')[0];
   cache.drawerToggle = document.getElementById('drawer-toggle');
+  
+  cache.csrfToken = document
+    .querySelectorAll('[name="csrf-token"]')[0]
+    .getAttribute('content')
 }
 
 function clearState() {
@@ -51,13 +56,37 @@ function mountNewsletterForm() {
     function(e) {
       e.preventDefault();
       e.stopPropagation();
-      var value = String(cache.emailInput.value).toLowerCase();
-      var isEmail = EMAIL_REGEX.test(value);
+
+      var emailInput = document.getElementById('email-input');
+      var value = emailInput.value;
+      var isEmail = EMAIL_REGEX.test(String(value).toLowerCase());
     
       if ((value.length === 0) || (!isEmail)) {
         cache.emailInput.classList.add('TlTextInput__error');
       } else {
-        this.submit();
+        var url = '<%= Rails.configuration.base_url %>/leads';
+        var fetchData = {
+          method: 'POST',
+          body: JSON.stringify({
+            email: value
+          }),
+          headers: {
+            "X-Requested-With": 'XMLHttpRequest',
+            'X-CSRF-Token': cache.csrfToken,
+            'Accept': 'application/json',
+            'Content-Type': 'application/json'
+          },
+        }
+        fetch(url, fetchData)
+        .then(
+          function(resp) {
+            if (!resp.ok) {
+              cache.emailInput.classList.add('TlTextInput__error');
+            } else {
+              console.log('OK')
+            }
+          }
+        )
       }
     },
     false
