--- a/app/views/home/_newsletter.html.erb
+++ b/app/views/home/_newsletter.html.erb
@@ -6,7 +6,7 @@
       and tricks for how to teach your kids about money
     </p>
   </div>
-  <div class="Newsletter__form-control">
+  <div class="Newsletter__form-control FormControl">
     <%= form_tag leads_path, id: 'newsletter-form' do %>
       <div class="Newsletter__text-input-container">
         <%=
@@ -31,5 +31,8 @@
         )
       %>
     <% end %>
+  </div>
+  <div class="Success">
+    <p>Thanks! We'll be in touch soon.</p>
   </div>
 </section>
