hero images and style tweaks

--- a/app/assets/stylesheets/form/button.scss
+++ b/app/assets/stylesheets/form/button.scss
@@ -4,7 +4,8 @@
   border-radius: 5px;
   padding: 19px 30px;
   font-size: 16px;
-  font-family: 'Raleway', sans-serif;
+  font-weight: 600;
+  font-family: 'Open Sans', sans-serif;
   background-color: $tl-orange;
   color: white;
   transition: .2s;
