--- a/app/views/home/_features.html.erb
+++ b/app/views/home/_features.html.erb
@@ -2,7 +2,7 @@
   <div class="Content">
     <div class="Features__heading">
       <h3>
-        Till is building a kickass suite of parental
+        Till is building a awesome suite of parental
         money management and teaching tools
       </h3>
     </div>
