--- a/app/views/home/_newsletter.html.erb
+++ b/app/views/home/_newsletter.html.erb
@@ -24,7 +24,7 @@
         render(
           partial: 'shared/form/button',
           locals: {
-            value: 'Submit',
+            value: 'Subscribe',
             type: 'submit',
             name: "btnSubmit"
           }
