--- a/app/assets/stylesheets/footer/terms.scss
+++ b/app/assets/stylesheets/footer/terms.scss
@@ -15,7 +15,8 @@
 
   &__dot {
     height: 5px;
-    width: 5px;
+    min-width: 5px;
+    max-width: 5px;
     margin: 0 10px;
     background-color: $tl-pink;
   }
