--- a/app/assets/stylesheets/home/features.scss
+++ b/app/assets/stylesheets/home/features.scss
@@ -14,10 +14,11 @@
 
   h3 {
     max-width: 500px;
+    font-weight: 600;
 
     @media (min-width: $desktop-width) {
-      max-width: 1000px;
-      font-size: 45px;
+      max-width: 900px;
+      font-size: 30px;
     }
   }
 
@@ -62,16 +63,16 @@
       color: $tl-navy;
       margin: 0;
       text-align: left;
+      font-weight: 600;
 
       @media (min-width: $desktop-width) {
-        font-size: 25px;
+        font-size: 20px;
       }
     }
 
     p {
-      @media (min-width: $desktop-width) {
-        font-size: 16px;
-      }
+      font-size: 16px;
+      line-height: 23px;
     }
   }
 
