--- a/app/assets/stylesheets/home/goals.scss
+++ b/app/assets/stylesheets/home/goals.scss
@@ -17,7 +17,8 @@
       justify-content: space-between;
 
       h3 {
-        font-size: 30px
+        font-size: 25px;
+        font-weight: 600;
       }
     }
   }
@@ -36,7 +37,7 @@
     align-items: center;
 
     @media (min-width: $desktop-width) {
-      font-size: 25px;
+      font-size: 20px;
       margin-bottom: 30px;
     }
   }
