--- a/app/assets/stylesheets/home/newsletter.scss
+++ b/app/assets/stylesheets/home/newsletter.scss
@@ -5,7 +5,11 @@
   padding: 40px 30px;
   background-color: $tl-navy;
 
-  h2 { font-size: 30px; }
+  h2 {
+    font-size: 30px;
+    font-weight: 600;
+    margin-bottom: 15px;
+  }
 
   h2, p {
     color: white;
@@ -27,7 +31,7 @@
 
       .TlButton {
         margin-top: 24px;
-        width: 112px;
+        width: 135px;
       }
     }
   }
