--- a/app/views/header/_header_nav.html.erb
+++ b/app/views/header/_header_nav.html.erb
@@ -1,6 +1,6 @@
 <nav class="HeaderNav mobileHide">
   <ul>
-    <li><a href="#welcome">About Us</a></li>
+    <li><a href="#welcome">About</a></li>
     <li><a href="#menu">Newsletters</a></li>
     <li>
       <%= 
