--- a/app/views/home/_lead_value_prop.html.erb
+++ b/app/views/home/_lead_value_prop.html.erb
@@ -1,11 +1,11 @@
 <section class="LeadValueProp parent">
   <div class="Content">
     <h3>
-      It's never too early to talk to your kids about money
+      What do kids learn when you give them money?
     </h3>
     <p>
-      Till is creating the toolkit and the roadmap to ensure you
-      successfully teach your kids to be financially responsible.
+      Till is a better way to give your kids money by simplifying 
+      and tracking the commitments tied to that giving. 
     </p>
   </div>
 </section>
