--- a/app/views/home/_tagline_container.html.erb
+++ b/app/views/home/_tagline_container.html.erb
@@ -4,7 +4,7 @@
       render(
         partial: 'shared/tagline',
         locals: {
-          body: 'This is a tag line that goes here'
+          body: 'A better way to give your kids money'
         }
       )
     %>
