--- a/app/views/home/_newsletter.html.erb
+++ b/app/views/home/_newsletter.html.erb
@@ -2,8 +2,8 @@
   <div class="Newsletter__copy">
     <h2>Sign up for our newsletter</h2>
     <p>
-      Stay tuned on our progress and get proven tips
-      and tricks for how to teach your kids about money
+      Learn more about how to raise financially savvy kids and 
+      help us decide what features and functions come out first
     </p>
   </div>
   <div class="Newsletter__form-control FormControl">
